--- a/styles.css
+++ b/styles.css
@@ -40,4 +40,89 @@ img {
   padding: 0 20px;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
+  background-color: var(--light-blue);
+  height: 100vh;
+}
+
+p {
+  font-size: 1.6rem;
+  line-height: 1.5;
+}
+
+header {
+  text-align: center;
+  color: #ffffff;
+  padding-bottom: 3rem;
+}
+
+header h1 {
+  font-size: 3.5rem;
+  font-weight: 300;
+  line-height: 1;
+}
+
+header h1 span {
+  font-weight: 700;
+}
+
+section .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+form button {
+  outline: none;
+  border: 1px solid #ffffff;
+  padding: 8px;
+  border-radius: 3px;
+  background-color: transparent;
+  color: #fff;
+  font-size: 1.4rem;
+  font-weight: 700;
+  transition: all .3s;
+  cursor: pointer;
+}
+
+form button:hover {
+  background-color: var(--color-sec);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, .5);
+  z-index: 1;
+}
+
+.modal-content {
+  width: 80%;
+  max-width: 60rem;
+  background-color: #eeeeee;
+  margin: 15% auto;
+  padding: 2rem;
+  border: 1px solid #777;
+  text-align: center;
+  animation: slide ease .8;
+}
+
+@keyframes slide {
+  from {
+    transform: translateY(-30rem);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
